syntax = "proto3";

package holms.types.booking.reservations;
option csharp_namespace = "HOLMS.Types.Booking.Reservations";
option go_package = "booking/reservations";

import "supply/room_types/room_type_indicator.proto";
import "primitive/pb_inclusive_opsdate_range.proto";
import "supply/qualification_indicator.proto";
import "crm/guests/guest_indicator.proto";

message BookGenesisReservationRequest {
	holms.types.supply.room_types.RoomTypeIndicator room_type = 1;
	holms.types.primitive.PbInclusiveOpsdateRange date_range = 2;
	holms.types.supply.QualificationIndicator qualification = 3;
	holms.types.crm.guests.GuestIndicator guest = 4;
	int32 number_adults = 5;
	int32 number_children = 6;
}
